HT-74: Add finish ride Swagger endpoint
